[package]
name = "latgraph"
version = "0.1.0"
authors = ["Compilin <git@compilin.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
iced = { version = "0.2.0", features = ["canvas", "tokio"] }
iced_futures = "0.2.0"
iced_native = "0.3.0"
log = { version = "0.4.14" }
