[package]
name = "latgraph"
version = "0.2.0"
authors = ["Compilin <git@compilin.dev>"]
edition = "2018"
default-run = "latgraph"

[dependencies]
clap = "2.33.3"
conrod_core = "0.71.0"
conrod_glium = "0.71.0"
conrod_winit = "0.71.0"
dirs = { version = "3.0.1", optional = true }
env_logger = "0.8.3"
glium = "0.28.0"
image = "0.23.14"
log = { version = "0.4.14" }
rand = { version = "0.8.3", optional = true }
rand_distr = { version = "0.4.0", optional = true }
serde = { version = "1.0.125", optional = true }
serde_derive = { version = "1.0.125", optional = true }
tokio = { version = "1.4.0", optional = true, features = ["rt", "net", "time", "macros"] }
toml = { version = "0.5.8", optional = true }
winit = "0.23"

[features]
default = ["config"]
config = ["toml", "dirs", "serde", "serde_derive"]
console = []
test-server = ["rand", "rand_distr", "tokio"]

[[bin]]
name = "test-echo-server"
required-features = ["test-server"]
